<resources>
    <string name="app_name">Money Monocle</string>
    <string name="no_internet">No internet</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="email">Email</string>
    <string name="invalid_email_format">Invalid email format</string>
    <string name="password">Password</string>
    <string name="password_not_long_enough">Password must contain at least 8 symbols</string>
    <string name="password_not_enough_digits">Password must contain at least 1 digit</string>
    <string name="password_not_enough_uppercase">Password must contain at least 1 uppercase letter</string>
    <string name="username">Username</string>
    <string name="username_not_long_enough">Username must contain at least 1 symbol</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="go_to_signup">Go to sign up</string>
    <string name="go_to_signin">Go to sign in</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="manage_accounts">Manage accounts</string>
    <string name="manage_categories">Manage categories</string>
    <string name="account_does_not_exist">Account with that email does not exist</string>
    <string name="couldnt_sign_in">Could not sign in</string>
    <string name="error_snackbar">Error Snackbar</string>

    <string name="welcome">Welcome to Money Monocle</string>
    <string name="specify_current_balance">To start off, specify your current balance</string>
    <string name="enter_balance">Enter balance</string>
    <string name="max_accounts_restriction">You can only have 5 accounts for now</string>
    <string name="give_a_name_to_account">Give a name to your account</string>
    <string name="submit">Submit</string>
    <string name="hello">Hello</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="main">Main</string>
    <string name="spent">Spent</string>
    <string name="earned">Earned</string>
    <string name="pie_chart_title">Earnings and spendings over the last 5 days</string>

    <string name="no_data_attached_to_account">No data attached to your account was detected</string>
    <string name="current_balance">Current balance</string>
    <string name="expense">Expense</string>
    <string name="income">Income</string>
    <string name="category">Category</string>
    <string name="add">Add</string>
    <string name="add_income_category">Add Income Category</string>
    <string name="add_expense_category">Add Expense Category</string>
    <string name="add_expense_record">Add Expense Record</string>
    <string name="add_income_record">Add Income Record</string>
    
    <string name="wage">Wage</string>
    <string name="business">Business</string>
    <string name="interest">Interest</string>
    <string name="investment">Investment</string>
    <string name="gift">Gift</string>
    <string name="government_payment">Government Payment</string>

    <string name="entertainment">Entertainment</string>
    <string name="groceries">Groceries</string>
    <string name="insurance">Insurance</string>
    <string name="transportation">Transportation</string>
    <string name="utilities">Utilities</string>

    <string name="housing">Housing</string>
    <string name="rent">Rent</string>
    <string name="property_taxes">Property Taxes</string>
    <string name="renters_insurance">Renters Insurance</string>
    <string name="maintenance">Maintenance</string>
    
    <string name="food">Food</string>
    <string name="dining_out">Dining out</string>
    <string name="delivery">Delivery</string>

    <string name="personal_care">Personal Care</string>
    <string name="haircuts_styling">Haircuts/Styling</string>
    <string name="cosmetics_skincare">Cosmetics/Skincare</string>
    <string name="fitness">Fitness</string>
    <string name="clothing">Clothing</string>

    <string name="health">Health</string>
    <string name="doctor_visits">Doctor Visits</string>

    <string name="education">Education</string>
    <string name="other">Other</string>

    <string name="employment">Employment</string>

    <string name="pick_a_date">Pick a date</string>
    <string name="ok">OK</string>
    <string name="next">Next</string>
    <string name="cancel">Cancel</string>
    <string name="progress">In progress</string>
    <string name="invalid_format">Invalid format</string>
    <string name="category_doesnt_exist">Category does not exist</string>

    <string name="create_custom_category">Create custom category</string>
    <string name="give_a_name_to_category">Give a name to your category</string>
    <string name="unknown">Unknown</string>

    <string name="transaction_history">Transaction History</string>
    <string name="nothing_to_show">Nothing to show</string>

    <string name="expense_categories">Expense categories</string>
    <string name="income_categories">Income categories</string>
    <string name="categories">Categories</string>
    <string name="financial_accounts">Financial Accounts</string>
    <string name="switch_to_this_account">Switch to this account</string>
    <string name="delete_account">Delete account</string>

    <string name="bottom_sheet">Bottom sheet</string>
    <string name="text_field">Text field</string>

    <string name="change_currency">Change currency</string>
    <string name="change_currency_from">Change currency from</string>
    <string name="change_currency_to">to</string>
    <string name="be_advised">Be advised</string>
    <string name="currency_conversion_warning">You can change currency format only once a day. Also, transactions will not be converted to
    target currency</string>
    <string name="already_changed_currency">Already changed currency today</string>
    <string name="confirm">Confirm</string>
    <string name="icons_by">Icons by\u00A0</string>
    <string name="sign_out">Sign out</string>
</resources>